[project]
name = "paper-implementations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "opencv-contrib-python>=4.11.0.86",
    "pandas>=2.3.0",
    "pycocotools>=2.0.10",
    "pyttsx3>=2.99",
    "scikit-image>=0.25.2",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
]
